Static site (2015-09-11 shi)
==============================
Added jQuery fix for scroll link on FAQ


Static site (2015-09-03 shi)
==============================
FAQ page layout styles
Added General and Technical questions to FAQ
Added Generator questions to FAQ
Added more click states to FAQ
Added shortcut to FAQ list
Better links from static pages


Static site (2015-09-02 shi)
==============================
Changed BETA to badge status on About, index and news page
New FAQ page


Static site (2015-06-15 shi)
==============================
Fixed example code in about page


Static site (2015-06-05 shi)
==============================
Changed email to support@iatistandard.org
Translations email change
About page edits


Static site (2015-04-25 shi)
==============================
Fixed link to publisher portal


Static site (2015-03-04 shi)
==============================
Minor css changes to index


Static site (2015-03-03 shi)
==============================
Changed css styles for attribution section


Static site (2015-02-24 shi)
==============================
Changed layout for columns of Publishers / IDs
Rearranged dropdown search menu
Updated translations
Moved explore tab link
Generator css fix


Static site (2015-02-02 shi)
==============================
Added shortcut to Q


Static site (2015-01-05 shi)
==============================
Edited feedback css and info


Static site (2014-11-30 shi)
==============================
New post - Generator examples
Edit front page description


Static site (2014-11-28 shi)
==============================
New post - Generator
Fixed max-width for images in news posts


Static site (2014-11-14 shi)
==============================
Added Beta alert and temp style changes


Static site (2014-11-12 shi)
==============================
Edit text on index page
Added footer notes for attribution and explanation
Translations for new text


Static site (2014-10-30 shi)
==============================
Main links are now more prominent