@@ -1,0 +1,22 @@
+#blog_title trim=ends
+
+Adding country budgets to d-portal
+
+#blog_body form=markdown
+
+We have made a small change to what information is shown in publisher tables in d-portal – the ones where you are looking from an individual publisher’s perspective at recipient countries – by including organisation file budgets.  This is budget data which some publishers provide in their IATI organisation file (<i>as opposed to activity files, where most other IATI data is reported</i>) and it represents the total annual budget for that publisher, per recipient country.
+
+So instead of seeing the 2015 and 2016 activity file budget columns in tables such as <a href="http://d-portal.org/ctrack.html?publisher=GB-1&tongue=eng">this</a>, you can now see and compare the budgets related to existing activities (<i>from the activity files – the column which we have called ‘allocated’</i>) and the budget information in general for that country (<i>the column which we have called ‘total’</i>).
+
+<b>Note</b> - you can still scroll through past/future years using the arrows at the top of the table.
+
+The reason for this change is both to highlight the existence of general budget data within organisation files, which are potentially valuable data but not often known about or updated, and as a response to requests from users to be able to see this information – which (<i>provided the data is up to date</i>) allows you to start working out the remaining unallocated budget for a recipient country.
+
+As always <b>if you notice anything that you want to follow up on d-portal</b>, have any questions or suggestions please do get in touch...
+
+<h4>Links</h4>
+Publisher’s data queries – <a href="mailto:support@iatistandard.org?subject=Queries about Publisher's data">support@iatistandard.org</a>
+
+d-portal – <a href="mailto:queries@d-portal.org?subject=Queries about d-portal">queries@d-portal.org</a>
+
+GitHub - <a href="https://github.com/devinit/D-Portal">https://github.com/devinit/D-Portal</a>
