@@ -1,3 +1,8 @@
+Static site (2015-11-05 shi)
+==============================
+Added news post adding country budgets
+
+
 Static site (2015-09-11 shi)
 ==============================
 Added jQuery fix for scroll link on FAQ
